turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:11: error: not found: value i
  if (rule(i) == "L") {
           ^