turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var c:Color = getCouleurSol()
  var indice:Int = 0
  for (i <- 0 to colors.length) {
    if (colors(i) == c) {
      indice = i
    }
  }
  setCouleurSol(colors((indice+1)%(colors.length-1)))
  if (rule(i) == "L") {
    gauche()
    avance()
  } else {
    droite()
    avance()
  }
}

def setCouleurSol(c:Color) = {
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}